envoy-app/ci/k8s/proxy-nlb/envoy-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: external-gatewayclass
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: external-proxy-config
    namespace: envoy-gateway-system

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: envoy-gateway-system
  annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-DNS
     external-dns.alpha.kubernetes.io/target: "nginx-external-lb.chainomi.link"  
spec:
  gatewayClassName: external-gatewayclass
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTP       # HTTP here because TLS is terminated at the NLB
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: default
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "nginx.chainomi.link"
    # external-dns.alpha.kubernetes.io/target: "nginx-external-lb.chainomi.link"
    # external-dns.alpha.kubernetes.io/alias: "false"  
spec:
  parentRefs:
    # - name: external-gateway
    #   namespace: envoy-gateway-system
    #   sectionName: http
    - name: external-gateway
      namespace: envoy-gateway-system
      sectionName: https      
  hostnames:
    - nginx.chainomi.link
    - nginx2.chainomi.link
  #   - "*"    
  rules:
    - matches:
      # -  hostname: nginx.chainomi.link
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: nginx
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: envoy-gateway-system
  
spec:
  parentRefs:
    - name: external-gateway
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
